# fastapi-clean-architecture-boilerplate

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  api-collection.json  db.yml  docker-compose.yml  entrypoint.sh  example.env  mypy.ini  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 0001_user_first_last_name.py  0002_uuid_v7_server_default.py  0003_add_otp_table.py  0004_add_owner_and_car_tables.py  0005_add_rbac_and_superuser.py  0006_add_assignment_audit_to_rbac_junctions.py
app/: main.py
app/core/: auth.py  cache.py  database.py  email.py  event_bus.py  exception_handlers.py  exceptions.py  hasher.py  health.py  jwt.py  pagination.py  rate_limit.py  response.py  seed.py  settings.py
app/core/tests/: test_event_bus.py
app/modules/auth/api/: dependencies.py  router.py  schemas.py
app/modules/auth/cqrs/: command.py  query.py  result.py
app/modules/auth/domain/: events.py  exception.py
app/modules/auth/infrastructure/: event_handlers.py
app/modules/auth/tests/: conftest.py  test_cache_invalidation.py  test_login.py  test_logout.py  test_profile.py  test_refresh.py
app/modules/auth/use_cases/: activate_account.py  login.py  logout.py  profile.py  refresh.py  send_activation_otp.py
app/modules/car/api/: dependencies.py  router.py  schemas.py
app/modules/car/cqrs/: command.py  query.py  result.py
app/modules/car/domain/: entities.py  exception.py  interfaces.py
app/modules/car/tests/: conftest.py  test_car_api.py  test_create_car.py  test_get_car.py  test_list_cars.py
(+104 files in other folders)
