[project]
name = "fastapi-backend-boilerplate"
version = "0.1.0"
description = "A generic FastAPI backend boilerplate with auth, OTP, and user management"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "gunicorn>=26.0.0",
    "passlib[argon2]>=1.7.4",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uuid-utils>=0.14.1",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
]
test = [
    "httpx>=0.28.1",
    "polyfactory>=3.3.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = [
    "app/modules/user/tests",
    "app/core/tests",
    "app/modules/otp/tests",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
